@@ -5,15 +5,11 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 
 ---
 language: ruby
@@ -38,19 +34,17 @@ addons:
 
 before_install:
   - rm -f Gemfile.lock
+  - gem install -v '~> 1.17' bundler
 
 global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5"
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -62,42 +56,23 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5.10 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="5.5.10"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
     - stage: spec
-      name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.3.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.4.4
-      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
-      env: PUPPET_VERSION="~> 5.5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~> 6.0"
+      env: PUPPET_VERSION="~> 6"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
+    # Uncomment the following for deployment tasks and set 'secure' in both
+    # sections appropriately
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
@@ -106,7 +81,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "ihKs9Ej6kRNzLSYcmtPTrfDMkBiHUT9ZaF58tQ0dWq+GNOdWZYxEKWkHzJOCaCbh23tYVolDx52gJtqkmM5mr2xsYNltMAPMXGyaS0SCbJBqnsVL4h8Os6q26UM6v1rwfQaVZmjkNepkFeUO4AK+z8U9khUZowZEbOujDSFtrPaAClSq2npZnWT8oXZsldUilzFTTZ2+UuHSJy9G8/oz+fy6VliKGNVq5Abx6FnGBQJjPZjIwbD0UI/UXsjL5vCpNjSAY5sPHmmMO1SpMDq2DdO4kwa8f0JEx78tRGe9msfy1u0Ropsxbu4pWU8EXKFIvYu3BndsoaPWs7whoSnOVi22KnEw1DtyCB8M2aJMzh6LaSCZYQrzTyVtFnOuMm15W4fMpZs0ODQvYy2zS6WSrytxxyZiuxEjaD1U3kJ+7HFdwKMIlYhOBSgymRUkTB795DdA7gxgPbVts00GcaJyVawobTZB9jdsQX1xzMKAijjLqGXRwmjSnFA5bGkv1EnCq375ibEU5lvRxP96oum1uwDRQ6WruOJISL3xP/OSKHtOgTT8f7U5jIIGd1BUe/YkklIopjmywzM+yKAvUJQCE/CmS4Ke11zZVnV3ls0YRXETjcGIfaeuHBjMJlCMSVZvZozzNp+aaQq9+YCpQ/8NJ/b5hRPBqBBF+3wYOLMMcWo="
+            secure: "CHANGE_SECURE"
           skip_cleanup: true
           on:
             tags: true
@@ -114,7 +89,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "d3jg+zI+3H/eIUZLJS8FwR69bRl+jETCemqzhXHKItjOKfo1kuhBD6uWQp2rYnhqK2l16WM1wEzGlxyFmRtiVSaaG5PSPtFXUBeHq/HDhXWHp1rlay+SAztxI02D5nF1qdP4vb6sJnZmR/UgErnw8lTMWzNaFl8OURDKBBHYo34H1C44ghvU/lygUts2ktTL40L0BDS9RKWeyy+PxGsEMJJHkLOB3E1tbuAVzCQE4iSeoierEGbHuwpqOPP07I7BGMbYBcpCLi5Ja1MQF78YIqvJ/BXMbPUiktFz0iB6B885o6+SqE++bDSpgltP6LpWfreVVBWe5/uE0y6lUw9gD5YQojTiNihwY1/YWPBG9iaWDYfo0T8P34IWGO76VUxjOuIG6ZkQj3+1QjC8JI/F7iuGP8iC4dqMbFwvK/WLS5yOGb5FcjL8sPZMTalI0f/bE7aIGpC9s5dDBxxDv7SAGeD5IF/8DwzYKqkegIA5+yBlyHwJ6/dDyM0z6sNmGWOB9R4P/4lfy/p3qm4XQuUlQN9ghEvSyEFJQl3QZ4xGa00JHvWVzBo0qEAn+CDl3DVH9P7fSHKTRglp7CnaWL0VvUPEfTTdE6dm1vkZjRIJyXOS8F2IJAszXM3Aq1FgvtDVwped9I36z2nBP+pb18o1yh4j+ig+rN53ClKjPykI6+c="
+            secure: "CHANGE_PASSWORD"
           on:
             tags: true
             condition: '($SKIP_FORGE_PUBLISH != true)'
