@@ -1,6 +1,6 @@
 {
   "name": "simp-at",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "author": "SIMP Team",
   "summary": "A SIMP Puppet module for managing at",
   "license": "Apache-2.0",
